power = 1 is best, fstat = 0 is best

--- a/Power Tests -- Kit.Rmd
+++ b/Power Tests -- Kit.Rmd
@@ -32,7 +32,9 @@ P = 0.8
 ```{r}
 #Linear regression Test for power
 pwr.f2.test(u = U, v = V, f2 = F, sig.level = sig, power = )
+# power = 1 is best
 
 #Linear regression Test for F statistic
 pwr.f2.test(u = U, v = V, sig.level = sig, power = P)
+# F Statistic = 0 is best
 ```
